[metadata]
name = ptpip
version = 0.0.5
author = Dethcount
author_email = count.msn@gmail.com
description = PTP / IP client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dethcount/d5300-ptpip
project_urls =
    Bug Tracker = https://github.com/dethcount/ptpip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
